# client_implementation

./: CMakeLists.txt  Makefile
src/SourceFiles/: SimpleClient.cpp
